--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # Token from @BotFather
 TOKEN=
 
-# URL Cobalt API, no need to change. It will be raised locally.
-COBALT_API_URL=http://127.0.0.1:9000
+#DONT TOUCH!
+SERVICES='TikTok, YouTube, Яндекс.Музыка, RuTube, Pinterest'
